--- a/_posts/2020-03-01-features.md
+++ b/_posts/2020-03-01-features.md
@@ -5,6 +5,9 @@ title: Jekyll Garden Features
 This theme is a fork of <a href="https://github.com/raghuveerdotnet/simply-jekyll">the Simply Jekyll theme </a>,  which I used for around six months before building this one. Most of the core features, like feed, wiki-links becoming hyperlinks, backlinks, etc., are slightly modified versions of the Simple Jekyll theme. I have tried not to break features from the theme, but I am not sure as I don't use many of them. <a href="https://simply-jekyll.netlify.app/posts/explore">Check Simply Jekyll features here.</a>
 
 ### Note feed
+Sample change that I added here - will it influence whatever's in the blog?
+
+### Note feed
 Jekyll garden comes with a feed-like display of all notes. There is a frontmatter value called `notetype` using which you can decide if notes need to be displayed or not on the feed. Use `notetype:feed` to show, and `notetype:unfeed`. Read more at  [[The story of a hidden note]]
  
 ### Feed as Homepage
