--- a/_posts/2020-03-01-how-to.md
+++ b/_posts/2020-03-01-how-to.md
@@ -4,6 +4,9 @@ title: Install and Setup
 
 Setting up a Jekyll Garden is a simple task for both new users and existing Obsidian users. This document explains how to fork this Jekyll theme, start using it via Github pages, and configure the Obsidian folders and frontmatter. 
 
+### Note feed
+Sample change that I added here - will it influence whatever's in the blog?
+
 ### Github Setup
 
 **Step 1**: Sign-In to Github, visit the [theme page](https://github.com/Jekyll-Garden/jekyll-garden.github.io) and click on 'Use this Template'
